Restyled links on bright background and fixed header z-index

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   background: #C4C4C4;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 4;
 }
 
 /* Header contents */
